public/_assets/css/main.css
@font-face {
    font-family: 'MitMarionFont';
    src: url("/_assets/css/fonts/file.woff2") format("woff2"),
    url("/_assets/css/fonts/file.woff") format("woff"),
    url("/_assets/css/fonts/file.ttf") format("ttf");
}

* {
    font-family: MitMarionFont, Arial, sans-serif;
}

html {
    font-size: 16px;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.5rem;
}

a[target="_blank"] {
    padding-right: 0.5rem;
}

a[target="_blank"]:after {
    position: absolute;
    content: "";
    height: 1rem;
    width: 0.7rem;
    margin-left: -0.2rem;
    background-size: 70%;
    background-image: url("/_assets/css/images/arrow-filled-dark.svg");
    background-repeat: no-repeat;
    transform: rotate(160deg);
    background-position-y: top;
}

.cookieMessage a[target="_blank"]:after {
    background-image: url("/_assets/css/images/arrow-filled-light.svg");
}

.closeMessage {
    cursor: pointer;
    display: block;
}

.member .mainquote {
    font-size: 2.0rem;
    line-height: 2.9rem;
}

.contactIntro,
.cookieMessage,
.member .subquote,
.marion .mainquote,
.marion .advantages {
    line-height: 1.5rem;
}

body,
blockquote,
p,
.container-content {
    margin: 0;
}

ul {
    margin: 0;
    padding: 0;
}

header.container-content {
    padding: 0.5rem 0.5rem 0 0.5rem;
}

article.container-content {
    margin: 0.5rem 0 0 0;
    padding-bottom: 10rem;
}

.marion .mainquote {
    margin-left: 0.5rem;
}

.member .subquote {
    margin-top: 2rem;
    margin-bottom: 0;
    text-align: center;
}

section.marion .photo {
    width: 5rem;
    height: 5rem;
}

.generalText li,
.contactForm li,
section.marion li {
    list-style: square;
    padding-left: 0.4rem;
    margin-bottom: 0.5rem;
}

.logo {
    height: 1.7rem;
}

.burger {
    height: 2rem;
}

nav.stories {
    display: block;
    position: relative;
    max-width: 80%;
}

nav.stories .flyout {
    position: absolute;
    top: 0;
    left: 0;
    list-style: none;
}

.breadcrumb:after {
    position: relative;
}

.breadcrumb:after {
    position: absolute;
    content: "";
    height: 1rem;
    width: 0.7rem;
    margin-left: 0.5rem;
    background-size: 100%;
    background-image: url("/_assets/css/images/arrow-border.svg");
    background-repeat: no-repeat;
    transform: rotate(180deg);
    background-position-y: top;
}

li.breadcrumb:after {
    background-position-y: bottom;
    transform: rotate(0deg);
}

.breadcrumb,
nav .flyout li {
    min-height: 1.1rem;
    background-image: url("/_assets/css/images/slash.svg");
    background-repeat: no-repeat;
    background-position: 0.5rem 0.5rem;
    background-size: auto 1.1rem;
    padding: 0.5rem 0.5rem 0.5rem 1.5rem;
}

.breadcrumb,
nav.stories .flyout li {
    padding-left: 4.1rem;
    padding-right: 1.7rem;
    background-position-x: 3.4rem;
}

nav.corporate {
    display: block;
    position: relative;
    width: 100%;
}

nav.corporate .burger {
    display: block;
    margin: 0 0 0 auto;
}

nav.corporate .flyout {
    position: absolute;
    top: 2rem;
    right: 0;
    list-style: none;
}

nav.closed .flyout {
    display: none;
}

nav.open .flyout {
    display: block;
    z-index: 1;
}

.photo {
    object-fit: cover;
    border-radius: 50%;
    box-shadow: 0 18px 10px -15px #000000;
    border: 1px solid rgba(0, 0, 0, 0.5);
}

.member,
.marion {
    position: relative;
    margin-bottom: 4rem;
}

.member::after,
.marion::after {
    content: "";
    position: absolute;
    bottom: -2rem;
    left: 0;
    width: 100%;
    height: 0.2rem;
    opacity: 0.1;
    background-size: 100%;
    background-image: url("/_assets/css/images/hr.svg");
    background-repeat: no-repeat;
}

.member .mainquote {
    min-height: 5rem;
    padding: 0.2rem 0.1rem 3rem 50%;
    text-align: right;
    background-repeat: no-repeat;
    background-size: cover;
}

.button {
    cursor: pointer;
    display: block;
    width: 70%;
    margin: 0.5rem auto 0.5rem auto;
    padding: 1rem;
    text-align: center;
    font-size: 1rem;
    border: none;
    border-radius: 5px 5px 5px 5px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

.cookieMessage,
.zapper {
    box-shadow: 0 0 22px 0 rgba(0, 0, 0, 0.75);
}

.zap {
    display: block;
    padding: 1rem;
}

.zap.previous {
    text-align: left;
    padding-left: 2.5rem;
    margin-left: 1rem;
    background-size: 0.8rem;
    background-image: url("/_assets/css/images/arrow-border-left.svg");
    background-repeat: no-repeat;
    background-position: left center;
}

.zap.next {
    text-align: right;
    padding-right: 2.5rem;
    margin-right: 1rem;
    background-size: 0.8rem;
    background-image: url("/_assets/css/images/arrow-border-right.svg");
    background-repeat: no-repeat;
    background-position: right center;
}

.cookieMessage {
    text-align: center;
    display: block;
    padding: 1rem 0 1rem 0;
}

header {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-template-areas:
    "logo corporate"
    "stories stories";
}

header .logo {
    grid-area: logo;
}

header nav.corporate {
    grid-area: corporate;
    justify-self: end;
}

header nav.stories {
    grid-area: stories;
}

section.member .subquote {
    grid-area: subquote;
}

.member .subquote,
section.marion,
.contactForm,
.contactIntro,
.errorPage {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
}

section.marion {
    display: grid;
    margin-bottom: 4rem;
    row-gap: 1.0rem;
    grid-template-columns: 1fr 2fr 2fr;
    grid-template-rows: auto;
    grid-template-areas:
    "photo mainquote mainquote"
    ". advantages advantages"
    "closingText closingText closingText";
}

section.marion .photo {
    grid-area: photo;
    justify-self: end;
}

section.marion .mainquote {
    grid-area: mainquote;
}

section.marion .advantages {
    grid-area: advantages;
}

section.marion .closingText {
    grid-area: closingText;
}

.cookieMessage {
    position: fixed;
    width: 100%;
    bottom: 6rem;
}

.zapper {
    position: fixed;
    width: 100%;
    bottom: 0;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-column-gap: 0.1rem;
    grid-template-areas:
    "previous next";
}

.zapper .previous {
    grid-area: previous;
}

.zapper .next {
    grid-area: next;
}

.content {
    position: relative;
}

.breadcrumb,
.member .mainquote,
.cookieMessage,
.errorPage {
    color: #EFFFEF;
}

.marion,
.member,
.contact *,
.thankYou *,
.generalText {
    color: #336633;
}

nav .flyout,
nav .flyout a,
nav .flyout a:link:visited:hover:active,
.button,
.button:link:visited:hover:active,
.cookieMessage a,
.cookieMessage a:link:visited:hover:active,
.zap,
.zap:link:visited:hover:active,
.errorPage a,
.errorPage a:link:visited:hover:active {
    color: #EFFFEF;
    text-decoration: none;
}

.button.light,
.button.light:link:visited:hover:active,
.storyTeaser a,
.storyTeaser a:link:visited:hover:active {
    color: #336633;
    text-decoration: none;
}

.generalText a,
.generalText a:link:visited:hover:active {
    color: #336633;
    text-decoration: none;
}

body,
.content,
nav .flyout li.current,
nav .flyout li:hover,
nav.corporate .flyout li:first-child,
.mainquote span,
.button,
.cookieMessage,
.zapper,
.zap {
    background-color: #336633;
}

.button.light {
    background-color: #EFFFEF;
}

.cookieMessage,
.zapper {
    background: linear-gradient(90deg, #336633 0%, #336633 40%, rgba(51, 102, 51, 0.9) 50%, #336633 60%, #336633 100%);
}

nav .flyout {
    background-color: rgba(51, 102, 51, 0.9);
    box-shadow: 0 10px 2px 0 rgba(0, 0, 0, 0.75);
}

article,
.homeIntro {
    background-color: #EFFFEF;
}

.formElementGroup {
    background-color: rgba(51, 102, 51, 0.1);
}

.hidden {
    display: none;
}

.visible {
    display: block;
}

@media only screen and (min-device-width: 800px) {
    .content {
        margin-right: 20%;
        margin-left: 20%;
        box-shadow: 0 0 22px 0 rgba(0, 0, 0, 0.75);
    }

    .member::after,
    .marion::after {
        height: 0.4rem;
    }

    section.member .mainquote {
        min-height: 20rem;
        padding-top: 5rem;
        padding-left: 60%;
    }

    section.marion {
        grid-template-areas:
            "photo mainquote advantages"
            "photo mainquote advantages"
            "closingText closingText closingText";
    }

    section.marion .mainquote {
        width: 80%;
    }

    section.marion .photo {
        width: 10rem;
        height: 10rem;
    }

    .logo {
        height: 3rem;
    }

    .breadcrumb,
    nav.stories .flyout li {
        padding-left: 6.8rem;
        background-position-x: 6rem;
    }

    .burger {
        height: 2rem;
    }

    .logo,
    nav.corporate .burger {
        margin-top: 1rem;
        margin-bottom: 1rem;
    }

    nav.corporate .flyout {
        top: 3rem;
    }

    .cookieMessage,
    .zapper {
        width: 60%;
    }
}

